--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,19 @@
 <h1>QUIZ APP</h1>
-<br />
-
-<%= link_to "Student's Page - Take Quiz: ", {:controller => "quizzs", :action => "answering" } %>
+<div class="contact" style="margin-top: -25px">
+  <h2 class="sidebar2">Contact</h2>
+  <div class="contact-detail">
+    <p class="green"><strong>Lorem Ipsum is simply dummy text</strong></p>
+    <p><strong>Adress :</strong> Lorem Ipsum has been the<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;dummy
+      text the 1500s,</p>
+    <p><strong>E-mail :</strong> &nbsp;&nbsp;&nbsp;when an unknown printer
+      took</p>
+    <p><strong>Phone :</strong> &nbsp;&nbsp;&nbsp;00-0000000000<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;000-0000-0000</p>
+  </div>
+</div>
+<h2 style="padding-left: 200px; padding-top: 80px;">
+<%= link_to "Student's Page - Take Quiz: ", {:controller => "quizzs", :action => "answering" } %></h2>
 <br />
 <br />
 
