--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Demo</title>
+  <title>Quiz App</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+
+  <%= stylesheet_link_tag    "custom", media: "all", "data-turbolinks-track" => true %>
+
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="page-in">
+  <div class="page">
+    <div class="main">
+      <div class="header">
+        <div class="header-top">
+          <h1>Quiz <span>App</span></h1>
+         </div>
+        <div class="header-bottom">
+          <h2>You can Check your knowledge by<br/><br/> playing the Quiz</h2>
+        </div>
 
-<%= yield %>
+      </div>
+      <div class="content">
+
+          <div class="row1">
+
+            <%= yield %>
+          </div>
+
+
+    </div>
+      <div class="footer">
+
+      </div>
+     </div>
+  </div>
+</div>
+
 
 </body>
 </html>
