--- a/app/views/quizzs/_form.html.erb
+++ b/app/views/quizzs/_form.html.erb
@@ -11,29 +11,29 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :question %><br>
-    <%= f.text_area :question %>
+  <div class="field" style="font-weight: bold; font-size: small;">
+    <%= f.label :question  %><br>
+    <p style="padding-top: 5px;"><%= f.text_area :question,cols: 50, rows: 4 %></p>
   </div>
-  <div class="field">
+  <div class="field" style="font-weight: bold; font-size: small;">
     <%= f.label :ans1 %><br>
-    <%= f.text_area :ans1 %>
+    <p style="padding-top: 5px;"><%= f.text_area :ans1,cols: 50, rows: 4 %></p>
   </div>
-  <div class="field">
+  <div class="field" style="font-weight: bold; font-size: small;">
     <%= f.label :ans2 %><br>
-    <%= f.text_area :ans2 %>
+    <p style="padding-top: 5px;"><%= f.text_area :ans2,cols: 50, rows: 4 %></p>
   </div>
-  <div class="field">
+  <div class="field" style="font-weight: bold; font-size: small;">
     <%= f.label :ans3 %><br>
-    <%= f.text_area :ans3 %>
+    <p style="padding-top: 5px;"><%= f.text_area :ans3,cols: 50, rows: 4 %></p>
   </div>
-  <div class="field">
+  <div class="field" style="font-weight: bold; font-size: small;">
     <%= f.label :ans4 %><br>
-    <%= f.text_area :ans4 %>
+    <p style="padding-top: 5px;"><%= f.text_area :ans4,cols: 50, rows: 4 %></p>
   </div>
-  <div class="field">
+  <div class="field" style="font-weight: bold; font-size: small;">
     <%= f.label :correctans %><br>
-    <%= f.number_field :correctans %>
+    <p style="padding-top: 5px;"><%= f.number_field :correctans %></p>
   </div>
   <div class="actions">
     <%= f.submit %>
