--- a/app/views/quizzs/edit.html.erb
+++ b/app/views/quizzs/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing quizz</h1>
-
+<h1 style="color: #607e00">Editing quizz</h1>
+<br/>
 <%= render 'form' %>
 
 <%= link_to 'Show', @quizz %> |
