--- a/app/views/quizzs/show.html.erb
+++ b/app/views/quizzs/show.html.erb
@@ -1,34 +1,34 @@
 <p id="notice"><%= notice %></p>
-
+<br />
 <p>
   <strong>Question:</strong>
   <%= @quizz.question %>
 </p>
-
+<br/>
 <p>
-  <strong>Ans1:</strong>
+  <strong>Ans1:</strong>&nbsp;&nbsp;
   <%= @quizz.ans1 %>
 </p>
 
 <p>
-  <strong>Ans2:</strong>
+  <strong>Ans2:</strong>&nbsp;&nbsp;
   <%= @quizz.ans2 %>
 </p>
 
 <p>
-  <strong>Ans3:</strong>
+  <strong>Ans3:</strong>&nbsp;&nbsp;
   <%= @quizz.ans3 %>
 </p>
 
 <p>
-  <strong>Ans4:</strong>
+  <strong>Ans4:</strong>&nbsp;&nbsp;
   <%= @quizz.ans4 %>
 </p>
 
 <p>
-  <strong>Correctans:</strong>
+  <strong>Correctans:</strong>&nbsp;&nbsp;
   <%= @quizz.correctans %>
 </p>
-
+<br/>
 <%= link_to 'Edit', edit_quizz_path(@quizz) %> |
 <%= link_to 'Back', quizzs_path %>
